# search_engine

./: .gitignore  Cargo.toml  Rocket.toml  zip_file_data.ndjson
src/: main.rs
static/: index.html
