[package]
name = "search_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
zip = "0.6.6"
mimalloc = { version = "*", default-features = false }
eyre = "0.6.12"
tokio = "1.37.0"
rmp-serde = "1.3.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json", "tls"]


[profile.release]
debug = true

